# Bonkie

./: .gitignore  README.md  bot.py  pyproject.toml  run.bat  setup_uv.py
.github/workflows/: rufflint.yml
cogs/: error_handler.py  help.py  knockout.py  royal_stats.py  stats.py  updater.py
data/: guildConf.json  royale_config.json  weapons.json
utils/: booster_cooldown.py  command_checks.py  console.py  cooldown_message.py  files.py
