[project]
name = "bonkie"
version = "0.3.0"
description = "Bonkie Discord bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles",
    "aiohttp",
    "colorama",
    "discord",
    "openai",
    "psutil",
    "python-dotenv",
    "pytz",
    "requests",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"